fixed issue with navbar not resizing properly on small screen

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -4,7 +4,6 @@ nav.navbar.navbar-default {
 
 .custom-nav{
   background-color: #d49e8d;
-  height: 50px;
   box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
 }
 
